# gobot

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  PLAN.md  README.md  conan_provider.cmake  conanfile.py  conanfile.txt  pyproject.toml
.github/workflows/: ci-ubuntu.yml  ci.yml  gpu-ci.yml  python-publish.yml
3rdpart/: CMakeLists.txt
3rdpart/intrusive_ptr/: intrusive_ptr.hpp
apps/: CMakeLists.txt
apps/slam/: CMakeLists.txt  eskf_main.cpp
benchmark/: __init__.py  check_go1_warp_admission.py  compare_go1_batch_backends.py  go1_training_throughput.py  go1_velocity_benchmark.py  mujoco_uni_batch_benchmark.py
cmake/: CPM.cmake  conan_provider.cmake
doc/: architecture.md  architecture_design_notes.md  examples.md  luisa_rendering_plan.md  mjcf_equivalence.md  mjlab_terrain.md  mujoco_rl_plan.md  physics_mujoco_setup.md
examples/cartpole/: cartpole.jscn  env.py  inverted_pendulum.xml  project.gobot  train.py
examples/cartpole/policies/: cartpole.npz  cartpole.onnx  cartpole.pt
examples/cartpole/scripts/: cartpole.py
examples/cartpole/tools/: export_policy_onnx.py
examples/cartpole/train/: env.py  train.py
examples/go1/: README.md  flat_terrain_scene.jscn  go1.jscn  go1.xml  go1_env.py  go1_flat_scene.jscn  go1_profile.py  go1_scene.jscn  go1_velocity_contract.py  project.gobot  terrain_scene.jscn  train.py
examples/go1/policies/: go1.onnx  go1_velocity.onnx
examples/go1/scripts/: compare_unilab_gobot_go1_rough.py  go1.py
examples/go1/terrain/: rough_terrain.jres
examples/go1/tools/: checkpoint_policy.py  compare_go1_traces.py  evaluate_velocity_policy.py  export_gobot_trace.py  export_policy_onnx.py  export_reference_trace.py  generate_terrain_scene.py  go1_parity.py  refresh_go1_robot_scene.py
examples/go1/train/: __init__.py  _repo_imports.py  go1_env.py  go1_gait.py  go1_scene_runtime.py  go1_task_kernels.py  go1_train.py  go1_training_state.py  go1_velocity_benchmark.py  go1_velocity_cfg.py  go1_velocity_env.py  go1_velocity_train.py  go1_velocity_train_cpu_batch.py  go1_velocity_video.py  go1_warp_velocity_env.py  mujoco_uni_batch_benchmark.py
experiment/: CMakeLists.txt  application.cpp  application.hpp  main.cpp
experiment/include/: application.hpp
experiment/src/: application.cpp  main.cpp
experiment/vulkan/: surface.cpp
include/binding/: reg.hpp
include/binding/core/: bind_core.hpp
include/gobot/: error_macros.hpp  error_marcos.hpp  log.hpp  notification_enum.hpp  platfom.hpp  type_categroy.hpp
include/gobot/core/: color.hpp  hash_combine.hpp  macros.hpp  marcos.hpp  notification_enum.hpp  object.hpp  (+16 more)
modules/luisa_renderer/: luisa_renderer_module.cpp
python/: gobot_gym_adapter.py  gobot_gym_adapter.pyi  gobot_ppo.py
python/gobot/: __init__.py  __init__.pyi  _core.pyi  app.py  app.pyi  cartpole_env.py  cartpole_env.pyi  cli.py  gym_adapter.py  gym_adapter.pyi  physics.py  physics.pyi  render.py  render.pyi  rl.py  rl.pyi  scene.py  scene.pyi  scene_helpers.py  scene_helpers.pyi  sim.py  sim.pyi  terrain.py  terrain.pyi
python/gobot_cli/: __init__.py  editor.py
scripts/: build_luisa_compute.sh  smoke_installed_wheel.py  verify_release_wheel.py
shader/: CMakeLists.txt  glsl_hpp_generator.cpp
shader/glsl/: gl_buffer_declation.h  grid.frag  grid.vert  grid_calculation.h  grid_parameters.h
shader/glsl/debug/: debug_draw.frag  debug_draw.vert
shader/glsl/scene/: default_mesh.frag  default_mesh.vert  fullscreen_triangle.vert  fxaa.frag  shadow_depth.frag  shadow_depth.vert
src/: main.cpp
src/binding/: bind_all.cpp  bind_main.cpp
tests/: CMakeLists.txt  example_add.cpp
tests/LLGL/: test_LLGL_opengl_triangle.cpp
tests/architecture/: test_dependency_boundaries.py
tests/binding/: test_pybind.cpp
tests/core/: test_input.cpp  test_object_db.cpp  test_project_setting.cpp  test_ref_counted.cpp  test_registration.cpp  test_resource.cpp  test_rid.cpp  test_string_utils.cpp
tests/core/io/: resource_example.jres  scene_example.jscn  test_resource.cpp  test_resource_format_mesh.cpp  test_resource_format_mjcf.cpp  test_resource_format_scene.cpp  test_resource_format_urdf.cpp  test_resource_format_usd.cpp  test_variant_serializer.cpp
tests/core/math/: test_geometry.cpp  test_matrix.cpp  test_pcg_random.cpp
tests/core/window/: test_glfw_window.cpp  test_sdl_window.cpp
tests/editor/: test_edited_scene.cpp  test_python_panel.cpp  test_scene_play_session.cpp  test_type_icons.cpp
tests/filament/: test_filament_basic.cpp
tests/fixtures/go1/: reference_mujoco_warp_3_10.patch  reference_trace_v1.json
tests/fixtures/mesh/: blender_z_up_axis_triangle.dae  translated_triangle.dae  two_material.mtl
tests/fixtures/mjcf/: simple_robot.xml
tests/fixtures/urdf/: package.xml  simple_robot.urdf
tests/fixtures/urdf/meshes/: base_visual.dae
tests/physics/: test_joint_controller.cpp  test_physics_server.cpp
tests/python/: _gobot_test_import.py  rl_test_helpers.py  smoke_real_scene.py  test_go1_mujoco_warp_env.py  test_go1_reference_fixture.py  test_go1_reference_parity.py  test_go1_warp_benchmark_admission.py  test_mujoco_warp_provider.py  test_policy_manifest.py  test_python_bindings_smoke.py  test_raster_pipeline.py  test_render_product.py  test_render_product_cuda.py  test_rl_manager_config.py  test_rl_vector_env.py  test_terrain_generation_scene.py  test_velocity_env.py
tests/rendering/: fake_luisa_renderer_bad_abi.cpp  test_luisa_renderer_module.cpp  test_render_product.cpp  test_render_scene_preparation.cpp
tests/scene/: test_collision_shape_3d.cpp  test_mesh_instance_3d.cpp  test_node.cpp  test_node_3d.cpp  test_node_complex.cpp  test_node_creation_registry.cpp  test_node_path.cpp  test_packed_scene.cpp  test_primitive_mesh.cpp  test_resource_creation_registry.cpp  test_robot_nodes.cpp  test_scene_command.cpp  test_terrain_3d.cpp
tests/simulation/: test_locomotion_batch_runtime.cpp  test_locomotion_command_runtime.cpp  test_rl_environment.cpp  test_simulation_server.cpp
tests/support/: test_main.cpp  test_render_backend.cpp  test_render_backend.hpp
(+589 files in other folders)
